Fix spacing

--- a/app/styles/profile.css
+++ b/app/styles/profile.css
@@ -35,7 +35,7 @@
 }
 
 .profile-text-cell {
-  top: -10%;
+  top: -5%;
 }
 
 @media (min-width: 992px) { /* >= lg */
